--- a/package.json
+++ b/package.json
@@ -39,22 +39,27 @@
   "dependencies": {
     "bcrypt": "3.0.6",
     "body-parser": "1.19.0",
+    "bootstrap-daterangepicker": "^3.0.5",
     "concurrently": "4.1.1",
     "error-stack-parser": "2.0.2",
     "eval": "0.1.4",
     "express": "^4.17.0",
     "is-empty": "1.2.0",
+    "jquery": "^3.4.1",
     "json-server": "^0.15.0",
     "jsonwebtoken": "^8.5.1",
     "locus": "2.0.1",
     "mdbreact": "4.18.0",
+    "moment": "^2.24.0",
     "mongodb": "^3.2.6",
     "mongoose": "5.6.2",
     "mongoose-unique-validator": "2.0.3",
-    "prop-types": "15.7.2",
+    "prop-types": "^15.7.2",
     "query-params-mongo": "1.1.0",
     "query-string": "6.7.0",
+    "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-datepicker": "^2.8.0",
     "source-map-support": "0.5.12",
     "validator": "11.1.0",
     "whatwg-fetch": "3.0.0",
