--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-datepicker": "^2.8.0",
+    "react-datetime": "^2.16.3",
+    "react-table-sorter": "^2.0.0",
     "source-map-support": "0.5.12",
     "validator": "11.1.0",
     "whatwg-fetch": "3.0.0",
