--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "chart.js": "2.7.3",
     "classnames": "2.2.6",
+    "jwt-decode": "2.2.0",
     "mdbreact": "^4.18.0",
     "moment": "2.24.0",
     "node-sass": "4.11.0",
@@ -59,7 +60,8 @@
     "react-google-maps": "9.4.5",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.8",
-    "reactstrap": "7.1.0"
+    "reactstrap": "7.1.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/googlemaps": "3.30.18",
