--- a/package.json
+++ b/package.json
@@ -41,13 +41,16 @@
     "body-parser": "1.19.0",
     "bootstrap-daterangepicker": "^3.0.5",
     "concurrently": "4.1.1",
+    "cookie-parser": "1.4.4",
     "error-stack-parser": "2.0.2",
     "eval": "0.1.4",
     "express": "^4.17.0",
+    "express-jwt": "5.3.1",
     "is-empty": "1.2.0",
     "jquery": "^3.4.1",
     "json-server": "^0.15.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "2.2.0",
     "locus": "2.0.1",
     "mdbreact": "4.18.0",
     "moment": "^2.24.0",
