--- a/client/package.json
+++ b/client/package.json
@@ -54,7 +54,7 @@
     "react": "16.8.4",
     "react-chartjs-2": "2.7.4",
     "react-copy-to-clipboard": "5.0.1",
-    "react-datepicker": "^2.8.0",
+    "react-datepicker": "2.8.0",
     "react-datetime": "2.16.3",
     "react-dom": "16.8.4",
     "react-google-maps": "9.4.5",
